# uni

./: .config_example.json  .config_example2.json  LICENSE  README.md  __main__.py  _config.py  _creator.py  _logger.py  config_example.yaml  pyproject.toml  requirements.txt  sbx.py  setup.cfg  setup.py  tmp.json
.data/: tmp.py
.data/configs/5sem/algo/: 1-lab.json
.data/configs/5sem/metr/: 4-lab.json  5-lab-metr.json
.data/configs/5sem/tbe/: 2-lab-tbe.json  9-lab.json
.data/files_templates/: main_file  title_page
.data/templates/full_template/: build_report.sh
.data/templates/full_template/modules/: preamble.tex  (+1 more)
configs/5sem/metr/: 1-lab-metr.json  3-lab-metr.json
configs/5sem/tbe/: 6-lab.json  7-lab.json
configs/6sem/algo/: 1-lab.json
docs/: latex_tips.txt  report_naming.txt
report_creator/: __main__.py  _config.py  report_creator.py
src/.data/: profiles.yaml
src/.data/files_templates/: main_file  title_page
src/uni/: __init__.py  locations.py  run_cli.py  utils.py
src/uni/cli/: __init__.py  cli_app.py
src/uni/data_manager/: __init__.py
src/uni/profile_manager/: profile_manager.py
src/uni/report_creator/: config.py  resource.py
templates/latex-template-v2/scripts/: main.py
testing_area/: test_template.txt.template
testing_area/complex_resource/: chapters.expand
testing_area/root.resource/: root_resource_test.txt.template
uni/: __init__.py  __main__.py  locations.py  uni.py
uni/apps/: __init__.py
uni/apps/report_creator/: config.py  creator.py  logger.py  report_creator.py
uni/apps/uni/: __init__.py  uni_app.py
(+32 files in other folders)
