[tool.poetry]
name = "uni"
version = "0.1.0"
description = "A personal CLI tool for managing universety labs"
license = "MIT"
readme = "README.md"
authors = ["kira607 <kirill.lesckin@gmail.com>"]
# include = [".data/"]

[tool.poetry.dependencies]
python = "^3.8"
conlo = "^0.4"
colorama = ""
cleo = ""

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
uni = "uni.uni:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
