[metadata]
name = uni
version = attr: uni.__version__
author = kira607
author_email = kirill.lesckin@gmail.com
url = https://github.com/kira607/uni
description = A cli tool for creating latex report from template.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.8
package_dir =
    =src
packages = find:
setup_requires =
    setuptools>=46.4.0
install_requires =
    PyYAML
    cleo

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    uni = uni.run_cli:run_cli

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
